--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,14 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.project.nowcodercommunity=debug
 #logging.file=E:/Coding Files/ProjectFiles/nowcoder/community.log
+
+# MailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=wangcong_luck@sina.com
+spring.mail.password=0359c2694ffb1c24
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
