--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
 community.path.domain=http://localhost:8080
+
+community.path.upload=E:/work/data/upload
