--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
             <version>1.2.76</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
